--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -71,9 +71,6 @@ ul.horizontal li a.focus
 {
 	background-color:black;
 	color:#aaa;
-	position:absolute;
-	top:0;
-	left:0;
 	width:100%;
 	padding:2px 0;
 	height:24px;
@@ -238,9 +235,24 @@ footer li
 
 #how-it-works
 {
-	background:#eee;
-	padding:20px 0 10px 0;
+	background:transparent url(../images/bg_dots.png);
+	padding:10px 0;
+	position: relative;
 }
+#how-it-works h2
+{
+	font-style: italic;
+	font-size: 17px;
+	line-height: 25px;
+}
+#how-it-works .close
+{
+	position:absolute;
+	top: 2px;
+	right: 2px;
+	opacity: 1;
+}
+
 
 #how-it-works ul
 {
@@ -315,7 +327,7 @@ outline: solid 3px rgba(0, 136, 204, 0.5);
 	outline: 2px solid white;
 	border-top: 1px dotted #808184; 
 }
-.question + .question{ margin-top:2px;}
+.question + .question{ margin-top:5px;}
 
 .question.hoverstate
 {
@@ -365,7 +377,7 @@ outline: solid 3px rgba(0, 136, 204, 0.5);
 .image-credits
 {
 	position: absolute;
-	bottom: 3px;
+	bottom: 0;
 	padding:0 5px;
 	width:100%;
 	background:url(../images/bg_black-transparent.png);
