--- a/css/curiouscity-widget.css
+++ b/css/curiouscity-widget.css
@@ -1,29 +1,42 @@
-body{ background-color:black;
+body{ background-color:white;
 
 }
 
-h3{ font-weight:500; }
+h3{ font-weight:500; color: #662d91;}
 
 .wrapper
 {
-	width:300px;
-	height:330px;
+	width:298px;
+	height:358px;
 	padding:5px;
-	background-color:#eee;
+	background-color:white;
 	overflow:hidden;
+	border: 1px solid black;
+}
+.border {
+	border: 1px dotted #808184;
+}
+.main {
+	padding: 0 10px;
+}
+
+header img {
+	max-width: 91%;
+	margin: 5px auto;
+	display: block;
 }
 
 #tagline
 {
-	border-top:1px dotted #777;
+	border-top:1px dotted #808184;
 	margin-top: 5px;
 	padding-top: 5px;
-	color:#777;
+	color:#999;
 }
 
 #ballot
 {
-	height:200px;
+	height:188px;
 	
 }
 
@@ -31,21 +44,23 @@ h3{ font-weight:500; }
 #right-ballot
 {
 	height:100%;
-	width:149px;
+	width:49.4%;
 	float:left;
-	background-color:white;
 	position: relative;
 	display:none;
 }
 
 #left-ballot
 {
-	margin-right:2px;
+	padding-right:1px;
+	margin-right:1px;
+	border-right:1px dotted #808184;
 }
 #right-ballot{}
 
 .question
 {
+	background-image: url(../images/bg_dots.png);
 	background-color:white;
 	color:#222;
 	-webkit-transition: color,background-color .25s linear;
@@ -55,6 +70,7 @@ h3{ font-weight:500; }
 
 .question.hover
 {
+	background-image: none;
 	-webkit-transition: color,background-color .25s linear;
 	 transition: color,background-color .25s linear;
 	background-color:#49BEE8;
@@ -86,11 +102,12 @@ h3{ font-weight:500; }
 
 #submit-question
 {
-	margin-top:2px;
+	margin-top:5px;
 	padding: 3px 0;
-	border-top:1px dotted #777;
-	border-bottom:1px dotted #777;
+	border-top:1px dotted #808184;
+	border-bottom:1px dotted #808184;
 	text-align:center;
+	color: #777;
 }
 
 #submit-question a:link,
@@ -131,23 +148,98 @@ h3{ font-weight:500; }
 }
 
 #follow-up {
-
-	background-color:#49BEE8;
-	color:white;
-	font-size:14px;
-	height:185px;
 	display:none;
-	padding:5px;
 
 }
 
 
-#follow-up a{
-	color:white;
-
-
+#follow-up h3{
+	color: #662d91;
+	font-size: 15px;
+	line-height: 19px;
+}
+#follow-up h3 a{
+	color:#999;
 }
 
+
+.submit-wrap {
+	position:relative;
+}
+.submit-wrap .carrot {
+	position: absolute;
+	top: 25px;
+	left: -8px;
+	width: 10px;
+	height: 12px;
+	background: url(../images/carrot-mini.png) no-repeat;
+}
+.submit-question-text
+{
+	height:100px;
+	background: #fffbfe;
+	width: 242px !important;
+	border: 2px solid #f00ed3 !important;
+	font-size: 20px;
+	font-weight: normal;
+	line-height: 28px;
+	color: black;
+	padding: 10px 15px;
+	border-radius: 12px;
+}
+::-webkit-input-placeholder {
+   	color: #b7a6b5;
+	font-style: italic;
+}
+:-moz-placeholder {  
+   	color: #b7a6b5;  
+	font-style: italic;
+}
+/*for ie7/8 */
+.placeholder {
+   	color: #b7a6b5;  
+	font-style: italic;
+}
+.submit-sequence
+{
+	color: #999;
+}
+
+
+.question-form .btn {
+	position: absolute;
+	bottom: 18px;
+	right: 8px;
+}
+.btn-primary {
+	background-color: #20E0E0;
+	background-image: -ms-linear-gradient(top, #60E0E0, #48C8F8);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#60E0E0), to(#48C8F8));
+	background-image: -webkit-linear-gradient(top, #60E0E0, #48C8F8);
+	background-image: -o-linear-gradient(top, #60E0E0, #48C8F8);
+	background-image: -moz-linear-gradient(top, #60E0E0, #48C8F8);
+	background-image: linear-gradient(top, #60E0E0, #48C8F8);
+	background-repeat: repeat-x;
+	border-color: #60E0E0 #20E0E0 #48C8F8;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#60e0e0', endColorstr='#48c8f8', GradientType=0);
+	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+	letter-spacing: 1px;
+	text-transform: lowercase;
+	font-weight: 600;
+	padding: 1px 10px 1px;
+}
+.question-form .btn:hover {
+	transition: none;
+	-webkit-transition: none;
+	-moz-transition: none;
+	-ms-transition: none;
+	-o-transition: none;
+	transition: none;
+	background-position: 0;
+	background-color: inherit;
+	border: 1px solid black;
+}
 
 
 .link {
@@ -206,3 +298,15 @@ h3{ font-weight:500; }
 .social-googleplus{background-position:-45px 0;}
 
 .social i{ margin-right:5px;}
+
+
+.unstyled {
+	margin:3px 0;
+}
+.unstyled li {
+	display: inline;
+}
+.unstyled li img {
+	width: auto;
+	max-height: 23px;
+}
