--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -722,9 +722,29 @@ min-width: 105px;
 
 .cc-modal{
     display:none;
+    width:971px;
+    margin: -342px 0 0 -485px;
+    height:684px;
+     overflow:hidden;
 }
 
+.cc-modal .modal-body {
 
+    max-height:700px;
+    overflow:hidden;
+    padding-top:0;
+}
+
+.cc-modal .modal-header {
+
+    border-bottom:none;
+
+}
+
+.cc-modal .modal-header .close{
+    margin-top: -10px;
+margin-right: -10px;
+}
 .good-question-link{
     text-align:right;
     position: absolute;
